See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.95.00

              Build: Don't attempt to build 'pamexec' on systems without
              Unix process management.  Bug introduced in Netpbm 10.94
              (March 2021).

21.03.27 BJH  Release 10.94.00

              Add pamhomography:  Thanks Scott Pakin.

              pamstereogram: Add -yfillshift .

              pamtowinicon: Add BMP/PNG encoding to verbose output.

              Use internal random number generator everywhere random numbers
              are used except ppmtoilbm, so seeded results are the same on
              all platforms.

              pamexec: Issue message instead of being killed by a signal when
              the exec'ed program does not read the whole image"

              ppmforge: Fail if -dimension is greater than 5, which is
              useless.

              pamscale: Fix bogus "bad magic number" or similar failure most
              of the time with -nomix.  Broken since Netpbm 10.49 (December
              2009).

              pnmtopng: Fix incorrect transparency in output when requesting
              transparency.  Introduced after Netpbm 10.35 (August 2006) but
              not after Netpbm 10.47 (June 2009).

              pnmtopng: Fix buffer overrun or bogus "too many color/
              transparency pairs" failure when requesting transparency.
              Introduced after Netpbm 10.26 (January 2005) but not after
              Netpbm 10.35 (August 2006).

              pamtojpeg2k: Fix constant failure with message about file
              close failing.

              libnetpbm: pm_system: Fix bug: standard input feeder process
              repositions unrelated files.  Always broken (pm_system was new
              in Netpbm 10.13 (September 2003).

              Pamtowinicon: Fix crash or incorrect output with PNG encoding