@@ -1,9 +1,14 @@
+/* Implementation note: Mingw/Windows does not provide POSIX 'random', so
+   netpbm/pm_config.h makes that a macro for POSIX 'rand' on that platform
+*/
+
 #define _DEFAULT_SOURCE /* New name for SVID & BSD source defines */
 #define _XOPEN_SOURCE 500  /* Make sure random() is in stdlib.h */
 #define _BSD_SOURCE  /* Make sure random() is in stdlib.h */
 
 #include <stdlib.h>
 
+#include "netpbm/pm_config.h"
 #include "netpbm/rand.h"
 
 static void
