@@ -6,6 +6,9 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.95.00
 
+              Build: Fix build failure due to missing 'random' function on
+              Mingw platform.  Bug introduced in Netpbm 10.94 (March 2021).
+
               Build: Don't attempt to build 'pamexec' on systems without
               Unix process management.  Bug introduced in Netpbm 10.94
               (March 2021).
